--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,14 @@ name: zHealth
 version: '1.0-SNAPSHOT'
 main: org.import_os.zHealth.ZHealth
 api-version: '1.20'
+
+commands:
+  sethealth:
+    description: Set the Player's Health
+    usage: /sethealth <player> <health>
+    permission: zhealth.sethealth
+
+  sethunger:
+    description: Set the Player's Hunger
+    usage: /sethunger <player> <hunger>
+    permission: zhealth.sethunger
