Renamed /showhealth and /showhunger to /health & /hunger

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,9 +17,9 @@ commands:
   health:
     description: Shows the Player's Health
     usage: /health <player>
-    permission: zhealth.showhealth
+    permission: zhealth.health
 
   hunger:
     description: Shows the Player's Hunger
     usage: /hunger <player>
-    permission: zhealth.showhunger
+    permission: zhealth.hunger
